fixed problem where page was wider on smaller screens

--- a/code/public/styles/home.css
+++ b/code/public/styles/home.css
@@ -1,3 +1,8 @@
+.App {
+  max-width: 100vw;
+  overflow-x: hidden;
+}
+
 .App video {
   width: 100vw;
   height: 100vh;
